# file_manager

./: CMakeLists.txt  README.md  main.cpp
include/: file_operations.h  structures.h  ui.h
src/: file_operations.cpp  main.cpp  ui.cpp
